--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#FF761A" />
+    <meta name="msapplication-navbutton-color" content="#FF761A">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
+    <link rel="icon" sizes="128x128" href="/favicon.png">
     <link rel="icon" type="image/png" href="/favicon.png">
     <title>ProteinNow</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap" media="none" onload="if(media!='all')media='all'">
